--- a/QuanLyTiecCuoi/MVVM/View/MonAn/ChiTietTC.xaml
+++ b/QuanLyTiecCuoi/MVVM/View/MonAn/ChiTietTC.xaml
@@ -5,41 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QuanLyTiecCuoi.MVVM.View.MonAn"
         mc:Ignorable="d"
-        Title="Chi Tiết Món Ăn" Height="350" Width="250"
+        Title="Chi Tiết Món Ăn" Height="550" Width="400"
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
         MouseLeftButtonDown="Window_MouseLeftButtonDown">
-    <Grid>
-        <Border CornerRadius="20" BorderBrush="#111" BorderThickness="2"  Background="#FFF">
+    <Grid >
+        <Border  CornerRadius="20" Padding="5" BorderBrush="#673500" BorderThickness="2"  Background="#FFF">
 
-            <StackPanel>
-                <StackPanel DockPanel.Dock ="Right" Orientation="Horizontal">
+            <StackPanel Background="#ffffee" >
+                <StackPanel DockPanel.Dock ="Bottom" Orientation="Horizontal">
                     <TextBlock Text="Chi tiết món ăn" 
-                               TextAlignment="Center" Width="201" Height="14" FontWeight="Bold" Margin="15,0,0,0"/>
+                               TextAlignment="Center" Width="201" Height="32" FontSize="25" FontFamily="Cambria" FontWeight="Bold" Margin="80,10,30,10"/>
                     <Button x:Name="btnClose"
                             Content="✕" 
-                            Width="20" 
-                            Height="20" 
-                            Margin="0,10,0,0"
-                            Click="BtnClose_Click"/>
+                            
+                            Background="#ffffee"
+                            Width="16" 
+                            Height="24" 
+                            BorderThickness="0"
+                            Margin="50,5,10,5"
+                            Click="BtnClose_Click" RenderTransformOrigin="0.032,0.492"/>
                 </StackPanel>
-                <Image Source="{Binding ImagePath}" 
-                    Width="200" Height="170" 
+                <Image Source="{Binding HinhAnh}" 
+                    Width="300" Height="270" 
                     Stretch="UniformToFill" 
                     Margin="5"/>
                 <TextBlock Text="{Binding TenMon}"
                
                FontWeight="Bold" 
-               FontSize="24" 
+               FontSize="20" 
+               FontFamily="Cambria"
                TextAlignment="Center" 
-               Margin="5,5,5,0"/>
-                <TextBlock Text="{Binding DonGia}" 
+               Margin="5,10,5,0"/>
+                <TextBlock Text="{Binding DonGia,StringFormat='Giá: {0:N0} VND'}" 
 
-                    FontWeight="Bold" 
-                    FontSize="24" 
+                    FontFamily="Cambria"
+                    FontSize="20" 
                     TextAlignment="Center" 
-                    Margin="5,5,5,0"/>
+                    Margin="5,10,5,0"/>
             </StackPanel>
         </Border>
 
